--- a/teckels/main/templates/index.html
+++ b/teckels/main/templates/index.html
@@ -75,21 +75,21 @@
 						  <!-- Wrapper for slides -->
 						  <div class="carousel-inner" role="listbox">
 							<div class="item active">
-							  <img src="./images/1.jpg" alt="dog" class="img-responsive">
+							  <img src="{% static '../media/images/1.jpg' %}" alt="dog" class="img-responsive">
 							  <div class="carousel-caption ch">
 								<h3>Lorem ipsum dolor adipiscing elit. </h3>
 								<p>Suspendisse ut ante eget ex maximus malesuada tincidunt eu ex.</p>
 							  </div>
 							</div>
 							<div class="item">
-							  <img src="./images/4.jpg" alt="cat" class="img-responsive">
+							  <img src="{% static '../media/images/4.jpg' %}" alt="cat" class="img-responsive">
 							  <div class="carousel-caption ch">
 								<h3>Praesent sit amet consequat ante.</h3>
 								<p>Suspendisse ut ante eget ex maximus malesuada tincidunt eu ex.</p>
 							  </div>
 							</div>
 							<div class="item">
-							  <img src="./images/2.jpg" alt="wolfdog" class="img-responsive">
+							  <img src="{% static '../media/images/2.jpg' %}" alt="wolfdog" class="img-responsive">
 							  <div class="carousel-caption ch">
 								<h3>Sed at ligula sed nibh rutrum pretium </h3>
 								<p>Suspendisse ut ante eget ex maximus malesuada tincidunt eu ex.</p>
@@ -118,7 +118,7 @@
 					<h2>OUR-PRODUCTS</h2>
 					<div class="col-md-3 arr">
 						<div class="bg">
-						  <img src="./images/b.jpg" alt="pet" class="img-responsive">
+						  <img src="{% static '../media/images/b.jpg' %}" alt="pet" class="img-responsive">
 						  <span class="glyphicon glyphicon-heart pst" aria-hidden="true"></span>
 						  <div class="caption">
 							<h3>Muffin Cat</h3>
@@ -129,7 +129,7 @@
 					</div>
 					<div class="col-md-3 arr">
 						<div class="bg">
-						  <img src="./images/c.jpg" alt="pet" class="img-responsive">
+						  <img src="{% static '../media/images/c.jpg' %}" alt="pet" class="img-responsive">
 						  <span class="glyphicon glyphicon-heart pst" aria-hidden="true"></span>
 						  <div class="caption">
 							<h3>Doggy</h3>
@@ -140,7 +140,7 @@
 					</div>
 					<div class="col-md-3 arr">
 						<div class="bg">
-						  <img src="./images/d.jpg" alt="pet" class="img-responsive">
+						  <img src="{% static '../media/images/d.jpg' %}" alt="pet" class="img-responsive">
 						  <span class="glyphicon glyphicon-heart pst" aria-hidden="true"></span>
 						  <div class="caption">
 							<h3>Hamster</h3>
@@ -151,7 +151,7 @@
 					</div>
 					<div class="col-md-3 arr">
 						<div class="bg">
-						  <img src="./images/e.jpg" alt="pet" class="img-responsive">
+						  <img src="{% static '../media/images/e.jpg' %}" alt="pet" class="img-responsive">
 						  <span class="glyphicon glyphicon-heart pst" aria-hidden="true"></span>
 						  <div class="caption">
 							<h3>Lab Doggy</h3>
@@ -212,16 +212,16 @@
 			<div class="brand-logo">
 				<div class="container">
 					<div class="col-xs-6 col-md-3 brk3">
-						<a href=""><img src="./images/bd1.png" alt="" class="img-responsive"/></a>
+						<a href=""><img src="{% static '../media/images/bd1.png' %}" alt="" class="img-responsive"/></a>
 					</div>
 					<div class="col-xs-6 col-md-3 brk3">
-						<a href=""><img src="./images/bd2.png" alt="" class="img-responsive"/></a>
+						<a href=""><img src="{% static '../media/images/bd2.png' %}" alt="" class="img-responsive"/></a>
 					</div>
 					<div class="col-xs-6 col-md-3 brk3">
-						<a href=""><img src="./images/bd3.png" alt="" class="img-responsive"/></a>
+						<a href=""><img src="{% static '../media/images/bd3.png' %}" alt="" class="img-responsive"/></a>
 					</div>
 					<div class="col-xs-6 col-md-3 brk3">
-						<a href=""><img src="./images/bd4.png" alt="" class="img-responsive"/></a>
+						<a href=""><img src="{% static '../media/images/bd4.png' %}" alt="" class="img-responsive"/></a>
 					</div>
 					<div class="clearfix"></div>
 				</div>
