--- a/teckels/main/templates/index.html
+++ b/teckels/main/templates/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang ="es">
 	<head>
-		<title>Pet Kennel A pets Category Flat Bootstarp Resposive Website Template | Home :: w3layouts</title>
+		<title>{{shop.name}}</title>
 
 		{% block custom_css %}
 			<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
@@ -41,19 +41,17 @@
 							<!-- Collect the nav links, forms, and other content for toggling -->
 							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 								<ul class="nav navbar-nav">
-									<li><a class="active" href="index.html">HOME <span class="sr-only">(current)</span></a></li>
-									<li><a href="about.html">ABOUT</a></li>
+									<li><a class="active" href="index.html">INICIO <span class="sr-only">(current)</span></a></li>
+									<li><a href="about.html">NOSOTROS</a></li>
 									<li class="dropdown">
-									  <a href="gallery.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">GALLERY<span class="caret"></span></a>
+									  <a href="gallery.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">GALERÍA<span class="caret"></span></a>
 									  <ul class="dropdown-menu">
 										<li><a href="gallery.html">Action</a></li>
 										<li><a href="gallery.html">Another action</a></li>
 										<li><a href="gallery.html">Something else here</a></li>
 									  </ul>
 									</li>
-									<li><a href="pages.html">PAGES</a></li>
-									<li><a href="404.html">BLOG</a></li>
-									<li><a href="contact.html">CONTACT</a></li>
+									<li><a href="contact.html">CONTACTO</a></li>
 								</ul>
 							</div><!-- /.navbar-collapse -->
 								<div class="clearfix"></div>	
@@ -62,7 +60,7 @@
 						<div class="clearfix"></div>
 					</div>
 					<div class="logo">
-						<h1><a href="index.html">PET<span class="hlf"> KENNEL</span></a></h1>
+						<h1><a href="index.html">TECKELS<span class="hlf"> DE GOLAGE</span></a></h1>
 					</div>
 					<div class="banner-slider">
 						<div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -115,96 +113,42 @@
 		<div class="our-products">
 			<div class="container">
 				<div class="products-gallery">
-					<h2>OUR-PRODUCTS</h2>
-					<div class="col-md-3 arr">
+					<h2>Nuestros Teckels</h2>
+					<div class="col-md-4 arr">
 						<div class="bg">
-						  <img src="{% static '../media/images/b.jpg' %}" alt="pet" class="img-responsive">
-						  <span class="glyphicon glyphicon-heart pst" aria-hidden="true"></span>
-						  <div class="caption">
-							<h3>Muffin Cat</h3>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-							<p><a href="#" class="btn btn-danger" role="button">More</a></p>
-						</div>
-						</div>
-					</div>
-					<div class="col-md-3 arr">
-						<div class="bg">
-						  <img src="{% static '../media/images/c.jpg' %}" alt="pet" class="img-responsive">
-						  <span class="glyphicon glyphicon-heart pst" aria-hidden="true"></span>
-						  <div class="caption">
-							<h3>Doggy</h3>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-							<p><a href="#" class="btn btn-danger" role="button">More</a> </p>
-						  </div>
-						</div>
-					</div>
-					<div class="col-md-3 arr">
-						<div class="bg">
-						  <img src="{% static '../media/images/d.jpg' %}" alt="pet" class="img-responsive">
-						  <span class="glyphicon glyphicon-heart pst" aria-hidden="true"></span>
-						  <div class="caption">
-							<h3>Hamster</h3>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-							<p><a href="#" class="btn btn-danger" role="button">More</a></p>
-						  </div>
-						</div>
-					</div>
-					<div class="col-md-3 arr">
-						<div class="bg">
-						  <img src="{% static '../media/images/e.jpg' %}" alt="pet" class="img-responsive">
-						  <span class="glyphicon glyphicon-heart pst" aria-hidden="true"></span>
-						  <div class="caption">
-							<h3>Lab Doggy</h3>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-							<p><a href="#" class="btn btn-danger" role="button">More</a></p>
-						  </div>
-						 </div>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-					<div class="traits-technology">
-						<div class="col-md-8 tt">
-							<ul class="traits-text">
-								<li><h3>Traits, Technology</h3></li>
-								<li><p><b style="font-weight:600;">Lorem Ipsum is simply dummy text of the printing</b></p></li>
-								<li><p>There are many variations of passages of Lorem Ipsum available,<br>
-								but the majority have suffered alteration in some form, by injected humour,<br>
-								or randomised words which don't look even slightly believable.</p></li>
-							</ul>
-							<ol>
-								<div class="col-md-6 brk">
-								<li><a href="#">Lorem Ipsum is simply dummy text.</a></li>
-								<li><a href="#">Lorem Ipsum is simply dummy text.</a></li>
-								<li><a href="#">Lorem Ipsum is simply dummy text.</a></li>
-								</div>
-								<div class="col-md-6 brk">
-								<li><a href="#">Lorem Ipsum is simply dummy text.</a></li>
-								<li><a href="#">Lorem Ipsum is simply dummy text.</a></li>
-								<li><a href="#">Lorem Ipsum is simply dummy text.</a></li>
-								</div>
-								<div class="clearfix"></div>
-							</ol>
-							<span><a href="#" class="btn btn-danger bt" role="button">More</a></span>
-						</div>
-						<div class="col-md-4 tt">
-							<div class="traits-logos">
-								<div class="col-xs-6 col-md-6 tt brk2">
-									<span class="glyphicon glyphicon-leaf bgtl" aria-hidden="true"></span>
-								</div>
-								<div class="col-xs-6 col-md-6 tt brk2">
-									<span class="glyphicon glyphicon-grain bgtl" aria-hidden="true"></span>
-								</div>
-								<div class="col-xs-6 col-md-6 tt brk2">
-									<span class="glyphicon glyphicon-fire bgtl" aria-hidden="true"></span>
-								</div>	
-								<div class="col-xs-6 col-md-6 tt brk2">
-									<span class="glyphicon glyphicon-camera bgtl" aria-hidden="true"></span>
-								</div>
-								<div class="clearfix"></div>
+						 	<img src="{{category.0.thumbnail.url}}" alt="pet" class="img-responsive">
+						  	<div class="caption">
+								<h3>{{category.0.name}}</h3>
+								<p>{{category.0.description}}</p>
+								<p><a href="#" class="btn btn-danger" role="button">Ver</a></p>
 							</div>
 						</div>
-						<div class="clearfix"></div>
 					</div>
+					<div class="col-md-4 arr">
+						<div class="bg">
+						 	<img src="{{category.1.thumbnail.url}}" alt="pet" class="img-responsive">
+						  	<div class="caption">
+								<h3>{{category.1.name}}</h3>
+								<p>{{category.1.description}}</p>
+								<p><a href="#" class="btn btn-danger" role="button">Ver</a></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 arr">
+						<div class="bg">
+						 	<img src="{{category.2.thumbnail.url}}" alt="pet" class="img-responsive">
+						  	<div class="caption">
+								<h3>{{category.2.name}}</h3>
+								<p>{{category.2.description}}</p>
+								<p><a href="#" class="btn btn-danger" role="button">Ver</a></p>
+							</div>
+						</div>
+					</div>
+					
+					
+					<div class="clearfix"></div>
+				</div>
+					
 			</div>
 		</div>
 		<!--content-ends-->
