--- a/teckels/static/css/style.css
+++ b/teckels/static/css/style.css
@@ -29,6 +29,7 @@ body{
 	border: none !important;
 	min-height: 90px;
 	margin-bottom: 0;
+	margin-left: 140px;
 }
 .navbar-collapse {
 	padding: 0 !important;
