--- a/teckels/main/templates/contact.html
+++ b/teckels/main/templates/contact.html
@@ -1,6 +1,54 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block header %}
+	<!--header-part-->
+		<div class="banner-background" id="to-top">
+			<div class="container">
+				<div class="nav-back">
+					<div class="navigation">
+						<nav class="navbar navbar-default">
+							<!-- Brand and toggle get grouped for better mobile display -->
+							<div class="navbar-header">
+							  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							  </button>
+							</div>
+							<!-- Collect the nav links, forms, and other content for toggling -->
+							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+								<ul class="nav navbar-nav">
+									<li><a class="active" href="index.html">INICIO <span class="sr-only">(current)</span></a></li>
+									<li><a href="about.html">NOSOTROS</a></li>
+									<li class="dropdown">
+									  <a href="gallery.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">GALERÍA<span class="caret"></span></a>
+									  <ul class="dropdown-menu">
+										<li><a href="gallery.html">Action</a></li>
+										<li><a href="gallery.html">Another action</a></li>
+										<li><a href="gallery.html">Something else here</a></li>
+									  </ul>
+									</li>
+									<li><a href="contact.html">CONTACTO</a></li>
+								</ul>
+							</div><!-- /.navbar-collapse -->
+								<div class="clearfix"></div>	
+							<div class="clearfix"></div>
+						</nav>
+						<div class="clearfix"></div>
+					</div>
+					<div class="logo">
+						<h1><a href="index.html">TECKELS<span class="hlf"> DE GOLAGE</span></a></h1>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--header-ends-->
+{% endblock header %}
+	
+
+
 {% block main %}
 	<!--contact-->
 			<div class="contact-page">
@@ -35,19 +83,19 @@
 			</div>
 {% endblock main %}
 
-		<!---->
-		<script type="text/javascript">
-				$(document).ready(function() {
-						/*
-						var defaults = {
-						containerID: 'toTop', // fading element id
-						containerHoverID: 'toTopHover', // fading element hover id
-						scrollSpeed: 1200,
-						easingType: 'linear' 
-						};
-						*/
-				$().UItoTop({ easingType: 'easeOutQuart' });
-		});
-		</script>
-		<a href="#to-top" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
-		<!----> 
+<!---->
+<script type="text/javascript">
+		$(document).ready(function() {
+				/*
+				var defaults = {
+				containerID: 'toTop', // fading element id
+				containerHoverID: 'toTopHover', // fading element hover id
+				scrollSpeed: 1200,
+				easingType: 'linear' 
+				};
+				*/
+		$().UItoTop({ easingType: 'easeOutQuart' });
+});
+</script>
+<a href="#to-top" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+<!----> 
