--- a/teckels/main/templates/index.html
+++ b/teckels/main/templates/index.html
@@ -1,6 +1,94 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block header %}
+	<!--header-part-->
+		<div class="banner-background" id="to-top">
+			<div class="container">
+				<div class="nav-back">
+					<div class="navigation">
+						<nav class="navbar navbar-default">
+							<!-- Brand and toggle get grouped for better mobile display -->
+							<div class="navbar-header">
+							  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							  </button>
+							</div>
+							<!-- Collect the nav links, forms, and other content for toggling -->
+							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+								<ul class="nav navbar-nav">
+									<li><a class="active" href="index.html">INICIO <span class="sr-only">(current)</span></a></li>
+									<li><a href="about.html">NOSOTROS</a></li>
+									<li class="dropdown">
+									  <a href="gallery.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">GALERÍA<span class="caret"></span></a>
+									  <ul class="dropdown-menu">
+										<li><a href="gallery.html">Action</a></li>
+										<li><a href="gallery.html">Another action</a></li>
+										<li><a href="gallery.html">Something else here</a></li>
+									  </ul>
+									</li>
+									<li><a href="contact.html">CONTACTO</a></li>
+								</ul>
+							</div><!-- /.navbar-collapse -->
+								<div class="clearfix"></div>	
+							<div class="clearfix"></div>
+						</nav>
+						<div class="clearfix"></div>
+					</div>
+					<div class="logo">
+						<h1><a href="index.html">TECKELS<span class="hlf"> DE GOLAGE</span></a></h1>
+					</div>
+					<div class="banner-slider">
+						<div id="myCarousel" class="carousel slide" data-ride="carousel">
+						  <!-- Indicators -->
+						  <ol class="carousel-indicators">
+							<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+							<li data-target="#myCarousel" data-slide-to="1"></li>
+							<li data-target="#myCarousel" data-slide-to="2"></li>
+						  </ol>
+						  <!-- Wrapper for slides -->
+						  <div class="carousel-inner" role="listbox">
+							<div class="item active">
+							  <img src="{% static '../media/images/1.jpg' %}" alt="dog" class="img-responsive">
+							  <div class="carousel-caption ch">
+								<h3>Lorem ipsum dolor adipiscing elit. </h3>
+								<p>Suspendisse ut ante eget ex maximus malesuada tincidunt eu ex.</p>
+							  </div>
+							</div>
+							<div class="item">
+							  <img src="{% static '../media/images/4.jpg' %}" alt="cat" class="img-responsive">
+							  <div class="carousel-caption ch">
+								<h3>Praesent sit amet consequat ante.</h3>
+								<p>Suspendisse ut ante eget ex maximus malesuada tincidunt eu ex.</p>
+							  </div>
+							</div>
+							<div class="item">
+							  <img src="{% static '../media/images/2.jpg' %}" alt="wolfdog" class="img-responsive">
+							  <div class="carousel-caption ch">
+								<h3>Sed at ligula sed nibh rutrum pretium </h3>
+								<p>Suspendisse ut ante eget ex maximus malesuada tincidunt eu ex.</p>
+							  </div>
+							</div>
+						  </div>
+						  <!-- Controls -->
+						  <a class="carousel-control left" href="#myCarousel" role="button" data-slide="prev">
+							<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+							<span class="sr-only">Previous</span>
+						  </a>
+						  <a class="carousel-control right" href="#myCarousel" role="button" data-slide="next">
+							<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+						  </a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--header-ends-->
+{% endblock header %}
 
 {% block main %}
 	<!--content-->
