Changed into Spanish text in contact form.

--- a/teckels/main/templates/contact.html
+++ b/teckels/main/templates/contact.html
@@ -58,20 +58,20 @@
 			<div class="feed-back">
 				<div class="col-md-6 tt">
 				<div class="text-area">
-					<textarea value="Message:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}">Enter your text here...</textarea>
+					<textarea value="Message:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}">Escribe tu mensaje aquí...</textarea>
 				</div>
 				</div>
 				<div class="col-md-6 tt brk9">
 				<div class="form">
 					<form>
-						<input class="name" type="text" name="name" value="Your name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}"><br>
+						<input class="name" type="text" name="name" value="Nombre" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}"><br>
 						<br>
-						<input class="nuber" type="text" name="Phone number" value="Phone Number" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Number';}"><br>
+						<input class="nuber" type="text" name="Teléfono" value="Teléfono" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Number';}"><br>
 						<br>
 						<input class="mail" type="text" name="email" value="E-mail" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'E-mail';}"><br>
 						<br>
-						<button type="clear" class="btn btn-danger">Clear</button>
-						<button type="submit" class="btn btn-danger">Submit</button>
+						<button type="clear" class="btn btn-danger">Limpiar</button>
+						<button type="submit" class="btn btn-danger">Enviar</button>
 					</form>
 				</div>
 				</div>
