Replaced with teckel info.

--- a/teckels/main/templates/about.html
+++ b/teckels/main/templates/about.html
@@ -54,32 +54,16 @@
 			<div class="col-md-6 lt">
 				<div class="choose-us">
 					<h3>Historia e Instalaciones en Golage</h3>
-					<ul>
-						<li class="text-ul">
-							<span class="one"></span>
-							<div class="folt">
-							<h4>Lorem Ipsum is simply dummy text</h4>
-							<p>Lorem Ipsum has been the industry's standard dummy </p>
-							</div>
-							<div class="clearfix"></div>
-						</li>
-						<li class="text-ul">
-							<span class="two"></span>
-							<div class="folt">
-							<h4>Lorem Ipsum is simply dummy text</h4>
-							<p>Lorem Ipsum has been the industry's standard dummy </p>
-							</div>
-							<div class="clearfix"></div>
-						</li>
-						<li class="text-ul">
-							<span class="three"></span>
-							<div class="folt">
-							<h4>Lorem Ipsum is simply dummy text</h4>
-							<p>Lorem Ipsum has been the industry's standard dummy </p>
-							</div>
-							<div class="clearfix"></div>
-						</li>
-					</ul>
+					<p>Hola amigos, soy Pablo Antonio González Lage, criador de teckels miniaturakaninchen pelo corto y largo y por su puesto duro, raza canina por la que siento una gran debilidad. Mi compromiso y sensibilidad hacia el mundo animal es total. A principios de la década de los ochenta ésta circunstancia provocó en mí el inicio de mi dedicación a la cría exclusiva de teckels miniatura y kaninchen, motivando mi traslado residencial al campo. En un corto espacio de tiempo adquirí algunos magníficos ejemplares caninos a lo largo de Europa, base sobre la que desarrollar mi pasión.</p>
+					<br>
+					<p>Mis inicios como peluquero canino y mi asistencia al mundo de las exposiciones me hicieron conocedor de muy diversas razas. Todo esto fue el caldo de cultivo para formarme como criador, como lo demuestra mis más de setenta campeones de la raza teckel, todos ellos nacidos en el criadero.</p>
+					<br>
+					<p>Enlaza con las imágenes de los mejores ejemplares. Pelo largo, corto y duro. Encontrarás una ficha con las características propias de cada uno de ellos. También con galería de fotos dedicada a anécdotas, instalaciones y archivo histórico.</p>
+					<br>
+					<p>En nuestras instalaciones, nuestros compañeros llevan una vida feliz y relajada, teniendo espacio para soltar toda la energia que cada miembro de esta familia posee.</p>
+					<br>
+					<p>Observando como actuan, llegamos a saber las cualidades de cada uno de nuestros amigos, detalle imprescindible a la hora de reproducir y entregar a cada familia un cachorro acorde a sus gustos y necesidades.</p>
+					<br>
 					<div class="clear"></div>
 				</div>
 			</div>
@@ -87,7 +71,7 @@
 				<div class="few-words">
 					<h3>A few words about us.</h3>
 						<div class="few-text">
-							<img src="./images/gift.jpg" alt="" title="" class="img-responsive" />
+							<img src="{% static '../media/images/about.jpg' %}" alt="" title="" class="img-responsive" />
 							<div class="flt">
 								<h4>Lorem Ipsum is simply dummy text</h4>
 								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Aldus PageMaker including versions of Lorem Ipsum.</p>
