--- a/teckels/main/templates/about.html
+++ b/teckels/main/templates/about.html
@@ -82,6 +82,59 @@
 				</div>
 			</div>
 		<div class="clearfix"></div>
+		
+		<div class="row">
+			<div class='list-group gallery'>
+	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
+	                <a class="thumbnail fancybox" rel="ligthbox" href="{% static '../media/images/about.jpg' %}">
+	                    <img class="img-responsive" alt="" src="{% static '../media/images/about.jpg' %}" />
+	                    <div class='text-right'>
+	                        <small class='text-muted'>Image Title</small>
+	                    </div> <!-- text-right / end -->
+	                </a>
+	            </div> <!-- col-6 / end -->
+	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
+	                <a class="thumbnail fancybox" rel="ligthbox" href="http://placehold.it/300x320.png">
+	                    <img class="img-responsive" alt="" src="http://placehold.it/320x320" />
+	                    <div class='text-right'>
+	                        <small class='text-muted'>Image Title</small>
+	                    </div> <!-- text-right / end -->
+	                </a>
+	            </div> <!-- col-6 / end -->
+	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
+	                <a class="thumbnail fancybox" rel="ligthbox" href="http://placehold.it/300x320.png">
+	                    <img class="img-responsive" alt="" src="http://placehold.it/320x320" />
+	                    <div class='text-right'>
+	                        <small class='text-muted'>Image Title</small>
+	                    </div> <!-- text-right / end -->
+	                </a>
+	            </div> <!-- col-6 / end -->
+	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
+	                <a class="thumbnail fancybox" rel="ligthbox" href="http://placehold.it/300x320.png">
+	                    <img class="img-responsive" alt="" src="http://placehold.it/320x320" />
+	                    <div class='text-right'>
+	                        <small class='text-muted'>Image Title</small>
+	                    </div> <!-- text-right / end -->
+	                </a>
+	            </div> <!-- col-6 / end -->
+	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
+	                <a class="thumbnail fancybox" rel="ligthbox" href="http://placehold.it/300x320.png">
+	                    <img class="img-responsive" alt="" src="http://placehold.it/320x320" />
+	                    <div class='text-right'>
+	                        <small class='text-muted'>Image Title</small>
+	                    </div> <!-- text-right / end -->
+	                </a>
+	            </div> <!-- col-6 / end -->
+	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
+	                <a class="thumbnail fancybox" rel="ligthbox" href="http://placehold.it/300x320.png">
+	                    <img class="img-responsive" alt="" src="http://placehold.it/320x320" />
+	                    <div class='text-right'>
+	                        <small class='text-muted'>Image Title</small>
+	                    </div> <!-- text-right / end -->
+	                </a>
+	            </div> <!-- col-6 / end -->
+	        </div> <!-- list-group / end -->
+		</div>
 	</div>	
 {% endblock main %}
 
@@ -114,6 +167,29 @@
 						*/
 				$().UItoTop({ easingType: 'easeOutQuart' });
 		});
+		</script>
+		<script type="text/javascript">
+			$(document).ready(function(){
+			    /* This is basic - uses default settings */
+	
+				$("a#single_image").fancybox();
+				
+				/* Using custom settings */
+				
+				$("a#inline").fancybox({
+					'hideOnContentClick': true
+				});
+
+				/* Apply fancybox to multiple items */
+				
+				$("a.group").fancybox({
+					'transitionIn'	:	'elastic',
+					'transitionOut'	:	'elastic',
+					'speedIn'		:	600, 
+					'speedOut'		:	200, 
+					'overlayShow'	:	false
+				});
+			});
 		</script>
 	</body>
 </html>
