--- a/teckels/main/templates/about.html
+++ b/teckels/main/templates/about.html
@@ -72,17 +72,21 @@
 					<h3>A few words about us.</h3>
 						<div class="few-text">
 							<img src="{% static '../media/images/about.jpg' %}" alt="" title="" class="img-responsive" />
-							<div class="flt">
-								<h4>Lorem Ipsum is simply dummy text</h4>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Aldus PageMaker including versions of Lorem Ipsum.</p>
-							</div>
+							<img src="{% static '../media/images/about.jpg' %}" alt="" title="" class="img-responsive" />
 							<div class="clearfix"></div>
+							<img src="{% static '../media/images/about.jpg' %}" alt="" title="" class="img-responsive" />
+							<img src="{% static '../media/images/about.jpg' %}" alt="" title="" class="img-responsive" />
+						</div>
+						<div class="few-text">
+							<img src="{% static '../media/images/about.jpg' %}" alt="" title="" class="img-responsive" />
+							
+							
 						</div>
 					<p><a href="#" class="btn btn-danger" role="button">More</a> </p>
 				</div>
 			</div>
 		<div class="clearfix"></div>
-		
+
 		<div class="row">
 			<div class='list-group gallery'>
 	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
