--- a/teckels/main/templates/index.html
+++ b/teckels/main/templates/index.html
@@ -51,27 +51,25 @@
 						  </ol>
 						  <!-- Wrapper for slides -->
 						  <div class="carousel-inner" role="listbox">
-							<div class="item active">
-							  <img src="{% static '../media/images/1.jpg' %}" alt="dog" class="img-responsive">
-							  <div class="carousel-caption ch">
-								<h3>Lorem ipsum dolor adipiscing elit. </h3>
-								<p>Suspendisse ut ante eget ex maximus malesuada tincidunt eu ex.</p>
-							  </div>
-							</div>
-							<div class="item">
-							  <img src="{% static '../media/images/4.jpg' %}" alt="cat" class="img-responsive">
-							  <div class="carousel-caption ch">
-								<h3>Praesent sit amet consequat ante.</h3>
-								<p>Suspendisse ut ante eget ex maximus malesuada tincidunt eu ex.</p>
-							  </div>
-							</div>
-							<div class="item">
-							  <img src="{% static '../media/images/2.jpg' %}" alt="wolfdog" class="img-responsive">
-							  <div class="carousel-caption ch">
-								<h3>Sed at ligula sed nibh rutrum pretium </h3>
-								<p>Suspendisse ut ante eget ex maximus malesuada tincidunt eu ex.</p>
-							  </div>
-							</div>
+							  {% for banner in banners %}
+							  	{% if forloop.first %}
+							  		<div class="item active">
+									  <img src="{{banner.image.url}}" alt="dog" class="img-responsive">
+									  <div class="carousel-caption ch">
+										<h3>Lorem ipsum dolor adipiscing elit. </h3>
+										<p>Suspendisse ut ante eget ex maximus malesuada tincidunt eu ex.</p>
+									  </div>
+									</div>
+								{% else %}
+									<div class="item">
+									  <img src="{{banner.image.url}}" alt="dog" class="img-responsive">
+									  <div class="carousel-caption ch">
+										<h3>Praesent sit amet consequat ante.</h3>
+										<p>Suspendisse ut ante eget ex maximus malesuada tincidunt eu ex.</p>
+									  </div>
+								  	</div>	
+							  	{% endif %}
+							  {% endfor %}
 						  </div>
 						  <!-- Controls -->
 						  <a class="carousel-control left" href="#myCarousel" role="button" data-slide="prev">
