--- a/teckels/main/templates/about.html
+++ b/teckels/main/templates/about.html
@@ -69,72 +69,33 @@
 			</div>
 			<div class="col-md-6 lt">
 				<div class="few-words">
-					<h3>A few words about us.</h3>
-						<div class="few-text">
-							<img src="{% static '../media/images/about.jpg' %}" alt="" title="" class="img-responsive" />
-							<img src="{% static '../media/images/about.jpg' %}" alt="" title="" class="img-responsive" />
-							<div class="clearfix"></div>
-							<img src="{% static '../media/images/about.jpg' %}" alt="" title="" class="img-responsive" />
-							<img src="{% static '../media/images/about.jpg' %}" alt="" title="" class="img-responsive" />
-						</div>
-						<div class="few-text">
-							<img src="{% static '../media/images/about.jpg' %}" alt="" title="" class="img-responsive" />
-							
-							
-						</div>
-					<p><a href="#" class="btn btn-danger" role="button">More</a> </p>
+					
+						<img src="{% static '../media/images/about/4.jpg' %}" alt="" title="" class="img-responsive" />
+						<div class="clearfix"></div>
 				</div>
 			</div>
 		<div class="clearfix"></div>
 
-		<div class="row">
+		<div class="row" style="margin-top:15px">
 			<div class='list-group gallery'>
 	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
-	                <a class="thumbnail fancybox" rel="ligthbox" href="{% static '../media/images/about.jpg' %}">
-	                    <img class="img-responsive" alt="" src="{% static '../media/images/about.jpg' %}" />
-	                    <div class='text-right'>
-	                        <small class='text-muted'>Image Title</small>
-	                    </div> <!-- text-right / end -->
+	                <a class="thumbnail fancybox" rel="ligthbox" href="{% static '../media/images/about/1.jpg' %}">
+	                    <img class="img-responsive" alt="" src="{% static '../media/images/about/1.jpg' %}" />
 	                </a>
 	            </div> <!-- col-6 / end -->
 	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
-	                <a class="thumbnail fancybox" rel="ligthbox" href="http://placehold.it/300x320.png">
-	                    <img class="img-responsive" alt="" src="http://placehold.it/320x320" />
-	                    <div class='text-right'>
-	                        <small class='text-muted'>Image Title</small>
-	                    </div> <!-- text-right / end -->
+	                <a class="thumbnail fancybox" rel="ligthbox" href="{% static '../media/images/about/3.jpg' %}">
+	                    <img class="img-responsive" alt="" src="{% static '../media/images/about/3.jpg' %}" />
 	                </a>
 	            </div> <!-- col-6 / end -->
 	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
-	                <a class="thumbnail fancybox" rel="ligthbox" href="http://placehold.it/300x320.png">
-	                    <img class="img-responsive" alt="" src="http://placehold.it/320x320" />
-	                    <div class='text-right'>
-	                        <small class='text-muted'>Image Title</small>
-	                    </div> <!-- text-right / end -->
+	                <a class="thumbnail fancybox" rel="ligthbox" href="{% static '../media/images/about/5.jpg' %}">
+	                    <img class="img-responsive" alt="" src="{% static '../media/images/about/5.jpg' %}" />
 	                </a>
 	            </div> <!-- col-6 / end -->
 	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
-	                <a class="thumbnail fancybox" rel="ligthbox" href="http://placehold.it/300x320.png">
-	                    <img class="img-responsive" alt="" src="http://placehold.it/320x320" />
-	                    <div class='text-right'>
-	                        <small class='text-muted'>Image Title</small>
-	                    </div> <!-- text-right / end -->
-	                </a>
-	            </div> <!-- col-6 / end -->
-	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
-	                <a class="thumbnail fancybox" rel="ligthbox" href="http://placehold.it/300x320.png">
-	                    <img class="img-responsive" alt="" src="http://placehold.it/320x320" />
-	                    <div class='text-right'>
-	                        <small class='text-muted'>Image Title</small>
-	                    </div> <!-- text-right / end -->
-	                </a>
-	            </div> <!-- col-6 / end -->
-	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
-	                <a class="thumbnail fancybox" rel="ligthbox" href="http://placehold.it/300x320.png">
-	                    <img class="img-responsive" alt="" src="http://placehold.it/320x320" />
-	                    <div class='text-right'>
-	                        <small class='text-muted'>Image Title</small>
-	                    </div> <!-- text-right / end -->
+	                <a class="thumbnail fancybox" rel="ligthbox" href="{% static '../media/images/about/6.jpg' %}">
+	                    <img class="img-responsive" alt="" src="{% static '../media/images/about/6.jpg' %}" />
 	                </a>
 	            </div> <!-- col-6 / end -->
 	        </div> <!-- list-group / end -->
