--- a/teckels/main/templates/about.html
+++ b/teckels/main/templates/about.html
@@ -21,7 +21,7 @@
 							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 								<ul class="nav navbar-nav">
 									<li><a href="{% url 'index' %}">INICIO <span class="sr-only">(current)</span></a></li>
-									<li><a href="about.html">NOSOTROS</a></li>
+									<li><a class="active" href="about.html">NOSOTROS</a></li>
 									<li class="dropdown">
 									  <a href="gallery.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">GALERÍA<span class="caret"></span></a>
 									  <ul class="dropdown-menu">
@@ -30,7 +30,7 @@
 										<li><a href="gallery.html">Something else here</a></li>
 									  </ul>
 									</li>
-									<li><a class="active" href="{% url 'contact' %}">CONTACTO</a></li>
+									<li><a href="{% url 'contact' %}">CONTACTO</a></li>
 								</ul>
 							</div><!-- /.navbar-collapse -->
 								<div class="clearfix"></div>	
