Addapted layout for teckle template.

--- a/teckels/main/templates/base.html
+++ b/teckels/main/templates/base.html
@@ -11,6 +11,7 @@
 
 			<!--coustom css-->
 			<link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css"/>
+			<link rel="stylesheet" href="{% static 'css/swipebox.css' %}">
 			
 			<!--fonts-->
 			<link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'>
@@ -101,6 +102,7 @@
 	<!--script-->
 	<script src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
 	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+	<script src="{% static 'js/jquery.swipebox.min.js' %}"></script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
