Added breadcrumb in teckel template.

--- a/teckels/main/templates/teckel.html
+++ b/teckels/main/templates/teckel.html
@@ -54,7 +54,15 @@
 		<div class="container">
 			<div class="service-list">
 				<h3>MAIOLAS BRUNO</h3>
-				
+				<ol class="breadcrumb">
+				  <li>
+				  	<a href="{% url 'index' %}">Inicio</a>
+				  </li>
+				  <li>
+				  	<a href="{% url 'index' %}">PELO DURO</a>
+				  </li>
+				  <li class="active">EL PERRO</li>
+				</ol>
 				<div class="col-md-5">
 					<div class="row">
 						<img src="{% static '../../media/images/5.jpg' %}" class="img-responsive" style="margin-left:15%; margin-bottom:15px">
