--- a/teckels/main/templates/index.html
+++ b/teckels/main/templates/index.html
@@ -89,41 +89,20 @@
 		<div class="container">
 			<div class="products-gallery">
 				<h2>Nuestros Teckels</h2>
-				<div class="col-md-4 arr">
-					<div class="bg">
-					 	<img src="{{category.0.thumbnail.url}}" alt="pet" class="img-responsive">
-					  	<div class="caption">
-							<h3>{{category.0.name}}</h3>
-							<p>{{category.0.description}}</p>
-							<p><a href="#" class="btn btn-danger" role="button">Ver</a></p>
+				{% for category in categories %}
+					<div class="col-md-4 arr">
+						<div class="bg">
+						 	<img src="{{category.thumbnail.url}}" alt="pet" class="img-responsive">
+						  	<div class="caption">
+								<h3>{{category.name}}</h3>
+								<p>{{category.description}}</p>
+								<p><a href="{% url 'teckels' category.slug category.id %}" class="btn btn-danger" role="button">Ver</a></p>
+							</div>
 						</div>
-					</div>
-				</div>
-				<div class="col-md-4 arr">
-					<div class="bg">
-					 	<img src="{{category.1.thumbnail.url}}" alt="pet" class="img-responsive">
-					  	<div class="caption">
-							<h3>{{category.1.name}}</h3>
-							<p>{{category.1.description}}</p>
-							<p><a href="#" class="btn btn-danger" role="button">Ver</a></p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 arr">
-					<div class="bg">
-					 	<img src="{{category.2.thumbnail.url}}" alt="pet" class="img-responsive">
-					  	<div class="caption">
-							<h3>{{category.2.name}}</h3>
-							<p>{{category.2.description}}</p>
-							<p><a href="#" class="btn btn-danger" role="button">Ver</a></p>
-						</div>
-					</div>
-				</div>
-				
-				
+					</div>	
+				{% endfor %}
 				<div class="clearfix"></div>
 			</div>
-				
 		</div>
 	</div>
 	<!--content-ends-->
