--- a/teckels/main/templates/teckels.html
+++ b/teckels/main/templates/teckels.html
@@ -52,19 +52,25 @@
 	<div class="our-products">
 		<div class="container">
 			<div class="products-gallery">
-				<h2>Nuestros Teckels</h2>
-				<div class="col-md-4 arr">
-					<div class="bg">
-					 	<img src="{{category.0.thumbnail.url}}" alt="pet" class="img-responsive">
-					  	<div class="caption">
-							<h3>{{category.0.name}}</h3>
-							<p><a href="#" class="btn btn-danger" role="button">Ver</a></p>
+				<h2>{{teckels.0.category.name}}</h2>
+				{% for teckel in teckels %}
+					<div class="col-md-4 arr" style="margin-top:15px">
+						<div class="bg">
+						{% if teckel.image %}
+						 	<img src="{{teckel.image.url}}" alt="pet" class="img-responsive">
+						{% else %}
+							<img src="https://bytesizemoments.com/wp-content/uploads/2014/04/placeholder3.png" alt="" class="img-responsive" style="height: 232px;">
+						{% endif %}
+						  	<div class="caption" style="padding: 15px 40px 0px;">
+								<h3>{{teckel.familiar_name}}</h3>
+								<p><a href="{% url 'teckel' teckel.slug teckel.id %}" class="btn btn-danger" role="button">Ver</a></p>
+							</div>
 						</div>
-					</div>
-				</div>
-				<div class="clearfix"></div>
-			</div>
+					</div>	
+				{% endfor %}
 				
+				<div class="clearfix"></div>
+			</div>	
 		</div>
 	</div>
 	<!--content-ends-->
