Added pelo corto teckels.

--- a/teckels/main/templates/teckel.html
+++ b/teckels/main/templates/teckel.html
@@ -88,7 +88,7 @@
 					</div>
 				</div>
 				<div class="col-md-7">
-					<div class="row" style="margin-left:10%">
+					<div class="row" style="margin-left:14%">
 						<ul class="list">
 							<li><a href="#">Nombre oficial: </a>{{teckel.official_name}}</li>
 							<li><a href="#">Nombre famiilar: </a>{{teckel.familiar_name}}</li>
@@ -100,7 +100,7 @@
 							<li><a href="#">Tamaño: </a>{{teckel.size}}</li>
 							<li><a href="#">Fecha de nacimiento: </a>{{teckel.born_date}}</li>
 							<li><a href="#">Títulos: </a>{{teckel.}}</li>
-							<li><a href="#">Comentarios: </a>{{teckel.}}</li>
+							<li><a href="#">Comentarios: </a>{{teckel.comments}}</li>
 						</ul>
 					</div>
 				</div>
