--- a/teckels/main/templates/teckels.html
+++ b/teckels/main/templates/teckels.html
@@ -57,7 +57,7 @@
 					<div class="col-md-4 arr" style="margin-top:15px">
 						<div class="bg">
 						{% if teckel.image %}
-						 	<img src="{{teckel.image.url}}" alt="pet" class="img-responsive">
+						 	<img src="{{teckel.image.url}}" alt="pet" class="img-responsive" style="height: 232px;">
 						{% else %}
 							<img src="https://bytesizemoments.com/wp-content/uploads/2014/04/placeholder3.png" alt="" class="img-responsive" style="height: 232px;">
 						{% endif %}
