Finished teckels migration.

--- a/teckels/main/templates/teckel.html
+++ b/teckels/main/templates/teckel.html
@@ -67,6 +67,8 @@
 					<div class="row">
 						{% if teckel.image %}
 							<img src="{{teckel.image.url}}" class="img-responsive" style="margin-left:15%; margin-bottom:15px">
+						{% else %}
+							<img src="https://bytesizemoments.com/wp-content/uploads/2014/04/placeholder3.png" alt="" class="img-responsive">
 						{% endif %}
 					</div>
 					<div class="row">
